[gd_scene load_steps=8 format=3 uid="uid://d0wtpgkfw785g"]

[ext_resource type="Script" uid="uid://bwo0anqu8k4a8" path="res://src/mini_game.gd" id="1_s1gus"]
[ext_resource type="Texture2D" uid="uid://4q335xxs2p" path="res://assets/icon.svg" id="1_ycabl"]
[ext_resource type="Script" uid="uid://dppr32xp2wbag" path="res://src/rich_text_good.gd" id="2_oe4s0"]
[ext_resource type="Script" uid="uid://b2b2n7mv7oe84" path="res://src/rich_text_bad.gd" id="2_uc01f"]
[ext_resource type="Script" uid="uid://dwicd6gc3ctlb" path="res://src/mini_game_prompt.gd" id="4_x0hv8"]

[sub_resource type="RichTextEffect" id="RichTextEffect_x0hv8"]
script = ExtResource("2_oe4s0")
metadata/_custom_type_script = "uid://dppr32xp2wbag"

[sub_resource type="RichTextEffect" id="RichTextEffect_mjgqc"]
script = ExtResource("2_uc01f")
metadata/_custom_type_script = "uid://b2b2n7mv7oe84"

[node name="MiniGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s1gus")

[node name="MiniGamePrompt" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(750, 400)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "If you are reading this. This is how options work [table=1,center][cell][center][good]Good[/good][/center][/cell][cell][center][bad]Bad[/bad][/center][/cell][/table]. I think they are working fine not sure. Are they good? [table=1,center][cell][center][good]Yes[/good][/center][/cell][cell][center][bad]No[/bad][/center][/cell][/table]."
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_x0hv8"), SubResource("RichTextEffect_mjgqc")]
script = ExtResource("4_x0hv8")
raw_text = "If you are reading this. This is how options work {options_0}. I think they are working fine not sure. Are they good? {options_1}."

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 87.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Writing an Article for dummies:"

[node name="TimerUI" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 128.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
value = 100.0
fill_mode = 5
texture_progress = ExtResource("1_ycabl")

[node name="ConfirmButton" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("1_ycabl")
